--- a/Rick-Morty/package.json
+++ b/Rick-Morty/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-paginate": "^8.3.0",
     "react-router": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
